--- a/vignettes/Week8_Simulation/Week8_vignette.Rmd
+++ b/vignettes/Week8_Simulation/Week8_vignette.Rmd
@@ -30,12 +30,10 @@ We will simulate data using the 'landgenreport' function of the package 'PopGenR
 
 ### c) Required R libraries
 
-All required packages should have been installed already when you installed 'LandGenCourse'.
-
 ```{r message=FALSE, warning=TRUE}
 library(LandGenCourse)
 library(PopGenReport )   #load the package
-#library(secr)            #to create a random habitat
+library(secr)            #to create a random habitat
 #library(gdistance)
 #library(mmod)
 library(raster)
@@ -45,12 +43,25 @@ library(raster)
 #library(Sunder)   # requires mnormt
 ```
 
-Package 'secr' not automatically installed with 'LandGenCourse':
+Package `secr` not automatically installed with 'LandGenCourse':
 
 ```{r message=FALSE, warning=TRUE}
 if(!require(secr)) install.packages("secr", repos='http://cran.us.r-project.org')
 #library(secr)
 ```
+
+Install `gstudio` if missing:
+
+```{r}
+if(!requireNamespace("popgraph", quietly = TRUE))
+{
+  install.packages(c("RgoogleMaps", "geosphere", "proto", "sampling", 
+                      "seqinr", "spacetime", "spdep"), dependencies=TRUE)
+  remotes::install_github("dyerlab/popgraph")
+}
+if(!requireNamespace("gstudio", quietly = TRUE)) remotes::install_github("dyerlab/gstudio")
+```
+
 
 The following 'setup chunk' is used to set the root address of file paths to the root of the project folder.
 
@@ -83,15 +94,24 @@ The function 'raster' of the 'secr' package (NOT from the 'raster' package) conv
 Note: there may be a warning about non-missing arguments, you can ignore it.
 
 ```{r }
-r <- secr::raster(secr::randomHabitat(secr::as.mask(tempgrid), 
-                                      p = 0.5, A = 0.5))
-table(values(r), exclude="")
+#r <- raster(secr::randomHabitat(secr::as.mask(tempgrid), p = 0.5, A = 0.5))
+#table(values(r), exclude="")
+```
+
+NOTE: April 2021: This does not seem to work anymore. Workaround:
+
+```{r}
+tmp <- secr::randomHabitat(secr::as.mask(tempgrid), p = 0.5, A = 0.5)
+r <- as.data.frame(tempgrid) 
+r$resistance <- 10
+r$resistance[as.numeric(row.names(tmp))] <- 1
+r <- rasterFromXYZ(r)
 ```
 
 Now we set all missing values (i.e., non-habitat) to 10 and verify this again with 'table'.  
 
 ```{r }
-values(r)[is.na(values(r))==T]<-10
+#values(r)[is.na(values(r))==T]<-10
 table(values(r), exclude="")
 par(mar=c(1,1,1,1))
 plot(r)
@@ -471,7 +491,7 @@ Now we would like to have a data frame that stores all possible combinations for
 
 ```{r}
 para.space <- expand.grid(rep=repeats, time=timesteps)
-tibble::as.tibble(para.space)
+tibble::as_tibble(para.space)
 ```
 
 As you can see this results in 15 combinations (3 time steps x 5 repeats). The beauty of this approach is that it is very flexible and adaptable to runs over other parameter combinations, as you can provide more than two parameter variables to 'expand.grid'.
