--- a/vignettes/Week10_Landscape Resistance/Week10_vignette.Rmd
+++ b/vignettes/Week10_Landscape Resistance/Week10_vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 10: Landscape resistance"
+title: "Week 10: Landscape Resistance"
 author: "Melanie Murphy, Jeff Bowman, Robby Marrotte and Helene Wagner"
 date: "`r Sys.Date()`"
 show_toc: true
@@ -39,7 +39,11 @@ This code builds on the data from the 'GeNetIt' package by Jeff Evans and Melani
 
 ### c) Required R libraries 
 
-All required packages should have been installed already when you installed 'LandGenCourse'.
+Install some packages needed for this worked example.
+
+```{r}
+if(!requireNamespace("GeNetIt", quietly = TRUE)) remotes::install_github("jeffreyevans/GeNetIt")
+```
 
 ```{r message=FALSE, warning=TRUE}
 require(LandGenCourse)
