--- a/vignettes/Week5_Spatial_Statistics/Week5_vignette.Rmd
+++ b/vignettes/Week5_Spatial_Statistics/Week5_vignette.Rmd
@@ -35,9 +35,23 @@ Here, we will analyze microsatellite data from Funk et al. (2005) and Murphy et 
 - **Frogs_diversity_allpops.csv**: Table with genetic diversity variables similar to Week 3. 
 - **ralu_coords_allpops.csv**: Spatial coordinates (both in UTM and LongLat format), and basin.
 
-### c) Required R libraries
+### c) Required R packages
 
-All required packages should have been installed already when you installed 'LandGenCourse'.
+Install some packages (not on CRAN) that are needed for this worked example.
+
+```{r}
+if(!requireNamespace("EcoGenetics", quietly = TRUE)) 
+  remotes::install_github("leandroroser/EcoGenetics-devel")
+if(!requireNamespace("GeNetIt", quietly = TRUE)) remotes::install_github("jeffreyevans/GeNetIt")
+if(!requireNamespace("popgraph", quietly = TRUE))
+{
+  install.packages(c("RgoogleMaps", "geosphere", "proto", "sampling", 
+                      "seqinr", "spacetime", "spdep"), dependencies=TRUE)
+  remotes::install_github("dyerlab/popgraph")
+}
+if(!requireNamespace("gstudio", quietly = TRUE)) remotes::install_github("dyerlab/gstudio")
+```
+
 
 ```{r message=FALSE, warning=TRUE}
 
@@ -144,7 +158,7 @@ Frogs.ecopop
 
 'EcoGenetics' provides convenient functions for converting genetic data to and from other packages.
 
-Import into 'genind' object (package 'adegenet'): there is a dedicated function, but we need to separately declare the variable that represents the populations and write it into the @pop slot of the 'genind' object. 
+Import into 'genind' object (package 'adegenet'): there is a dedicated function, but we need to separately declare the variable that represents the populations and write it into the `@pop` slot of the 'genind' object. 
 
 ```{r}
 Frogs.genind <- EcoGenetics::ecogen2genind(Frogs.ecogen)
@@ -190,8 +204,7 @@ Note: Some functions provide an option `linearized = TRUE` to linearize distance
 Pairwise Fst with package `hierfstat`:
 
 ```{r}
-GD.pop.PairwiseFst.hierfstat <- hierfstat::pairwise.fst(Frogs.genind, 
-                                pop = NULL, res.type = c("dist"))
+GD.pop.PairwiseFst.hierfstat <- as.dist(hierfstat::pairwise.neifst(hierfstat::genind2hierfstat(Frogs.genind)))
 ```
  
 Proportion of shared alleles with package 'PopGenReport':
@@ -284,7 +297,7 @@ The code is commented out with `#`. To run it, remove the `#`. The first part cr
 First, we calculate geographic (Euclidean) distances `Dgeo` with the `dist` function, using the spatial coordinates that we imported from ralu.site. These are UTM coordinates and thus metric. 
 
 ```{r}
-Dgeo <- dist(ecoslot.XY(Frogs.ecopop)[,1:2])
+Dgeo <- as.vector(dist(ecoslot.XY(Frogs.ecopop)[,1:2]))
 ```
 
 ### a) Visually check linearity
@@ -293,7 +306,8 @@ Before we quantify the linear relationship between genetic and geographic distan
 
 ```{r}
 par(mar=c(4,4,0,0))
-Dgen <- GD.pop$propShared.PopGenReport
+
+Dgen <- as.vector(GD.pop$propShared.PopGenReport)
 dens <- MASS::kde2d(Dgeo, Dgen, n=300)
 myPal <- colorRampPalette(c("white","blue","gold","orange","red"))
 plot(Dgeo, Dgen, pch=20, cex=0.5,  
@@ -327,7 +341,12 @@ lines(loess.smooth(log(Dgeo), Dgen), col="red")
 
 Next, we perform a Mantel test with the function `mantel` from the `vegan` package.
 
+We define Dgen and Dgeo anew, as we need them in 'dist' format this time, not as vectors.
+
 ```{r}
+Dgen <- GD.pop$propShared.PopGenReport
+Dgeo <- dist(ecoslot.XY(Frogs.ecopop)[,1:2])
+
 IBD <- vegan::mantel(Dgen,Dgeo, method="pearson")
 IBD
 ```
