--- a/vignettes/Week6_Selection/Week6_vignette.Rmd
+++ b/vignettes/Week6_Selection/Week6_vignette.Rmd
@@ -38,7 +38,13 @@ We will thus have the following data:
 
 ### c) Required R packages
 
-Most required packages should have been installed already when you installed 'LandGenCourse'.
+Install some packages needed for this worked example.
+
+```{r}
+if(!requireNamespace("EcoGenetics", quietly = TRUE)) 
+  remotes::install_github("leandroroser/EcoGenetics-devel")
+if(!requireNamespace("QstFstComp", quietly = TRUE)) remotes::install_github("kjgilbert/QstFstComp")
+```
 
 ```{r message=FALSE, warning=TRUE}
 library(LandGenCourse)
@@ -80,7 +86,7 @@ source(system.file("extdata", "panel.cor.r",
 ```{r}
 phen <- read.delim(system.file("extdata", "WWP_phenotype_data.txt", 
                             package = "LandGenCourse"), sep = "\t", header = T)
-tibble::as.tibble(phen)
+tibble::as_tibble(phen)
 ```
 
 Check the variable types: 'family' and 'block' have been imported as type 'integer', and we need to convert them to 'factor' first.
